--- a/css/selector/starter.css
+++ b/css/selector/starter.css
@@ -89,3 +89,23 @@ a:hover {
 .post:nth-of-type(3) {
     background-color: #dfe8dc;
 }
+
+h2::first-letter {
+    font-size: 30px;
+}
+
+p::first-line {
+    color: purple;
+}
+
+p::selection {
+    background-color: #fcbf49;
+}
+
+/*specificity order*/
+/* id > class > element  */
+
+/* important careful to use */
+button {
+    background-color: darkblue !important;
+}
