--- a/css/template/template.html
+++ b/css/template/template.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Position</title>
-    <link rel="stylesheet" href="position.css">
+    <title>Template</title>
+    <link rel="stylesheet" href="template.css">
 </head>
 
 <body>
