--- a/css/other_userful/transform.css
+++ b/css/other_userful/transform.css
@@ -56,3 +56,7 @@ section:nth-of-type(2) h1:nth-of-type(3) {
 section:nth-of-type(2) h1:nth-of-type(4) {
     transform: translateX(-500px) rotate(0.5turn) scale(1.5);
 }
+
+section:nth-of-type(2) {
+    transform: scale(0.7) translateX(300px);
+}
