javascript ejs import bootstrap and partials

--- a/views/moreCats.ejs
+++ b/views/moreCats.ejs
@@ -1,12 +1,5 @@
- <!DOCTYPE html>
-<html>
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>All Cats</title>
-</head>
-<bod>
+<%- include('partials/head') %>
+    <%- include('partials/navbar') %>
     <!-- EJS Syntax-->
     <h1>
         All The Cats
@@ -17,6 +10,4 @@
         <%}%>
     </ul>
     
-</bod>
-
-</html>
+<%- include('partials/footer') %>
