--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,18 +1,10 @@
-<!DOCTYPE html>
-<html>
+<%- include('partials/head') %>
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HOME</title>
-</head>
-<bod>
+    <%- include('partials/navbar') %>
     <!-- EJS Syntax-->
     <h1>The Home Page <%= 'hello world'.toUpperCase() %>
     </h1>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad, vitae sint. Magni doloribus natus suscipit laborum
         harum distinctio dicta recusandae expedita voluptate deserunt iste voluptatum impedit, facere asperiores quod
         sapiente</p>
-</bod>
-
-</html>
+<%- include('partials/footer') %>
