--- a/views/notfound.ejs
+++ b/views/notfound.ejs
@@ -1,13 +1,5 @@
-<!DOCTYPE html>
-<html lang="zh-Hant">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Subreddit: <%= subreddit %></title>
-</head>
-<body>
-
+<%- include('partials/head') %>
+    <%- include('partials/navbar') %>
     <h1>I'm sorry, we couldn't find the <%=subreddit%> subreddit!</h1>
 
-</body>
-</html>
+<%- include('partials/footer') %>
